# lab06-lastrobotstanding-reference

./: .gitignore  Bonus.cpp  Bonus.h  CMakeLists.txt  Direction.cpp  Direction.h  Game.cpp  Game.h  Message.cpp  Message.h  Position.cpp  Position.h  README.md  RobotRandom.cpp  RobotSmart.cpp  RobotState.cpp  RobotState.h  main.cpp  update_robots.sh
.github/workflows/: release.yaml
robot/: RobotSmart.cpp  RobotSmart.h  RobotsSimple.cpp
robots/: MonRobot.cpp  MonRobot.h  MonRobotGPKD.cpp  MonRobotGPKD.h  RobotFB.cpp  RobotFB.h  RobotFB_diag.cpp  RobotFB_diag.h  RobotTeamR.cpp  RobotTeamR.h  SoftIntersRobot.cpp  SoftIntersRobot.h  all.cpp
students/robots/: BonusState.cpp  BonusState.h  BorisGuillaumator.cpp  MapInfo.cpp  MeinRobot.cpp  MonRobot.cpp  MonRobot.h  MonRobotGPKD.cpp  MyRobot1.cpp  Point.cpp  Point.h  RobotFB.cpp  RobotFB.h  RobotFB_diag.cpp  RobotFB_diag.h  RobotTeamR.cpp  RobotTeamR.h  all.cpp  sonny_robot.cpp
students/robots/robot_1/: MyRobot1.cpp  MyRobot1.h  RobotPA.cpp  RobotPA.h  SoftIntersRobot.h
students/robots/robot_10/: RobotTeamR.cpp  RobotTeamR.h  SoftIntersRobot.cpp
students/robots/robot_11/: Pipou.cpp  Pipou.h  SoftIntersRobot.cpp
students/robots/robot_12/: SoftIntersRobot.cpp  SoftIntersRobot.h
students/robots/robot_13/: Pipou.cpp
students/robots/robot_2/: BonusState.cpp  MapInfo.h  MeinRobot.cpp  MeinRobot.h  MyRobot1.cpp  MyRobot1.h  Pipou.h  Point.cpp  Point.h  action.cpp  action.h  sonny_robot.cpp
students/robots/robot_3/: BonusState.cpp  BonusState.h  MapInfo.cpp  MapInfo.h  MeinRobot.cpp  MeinRobot.h  Point2.cpp  Point2.h  Point2D.cpp  Point2D.h  action.cpp  action.h  point.cpp  point.h  sonny_robot.cpp  sonny_robot.h
students/robots/robot_4/: MonRobot.cpp  MonRobot.h  RobotFB.cpp  RobotFB_diag.h  point.cpp  point.h  sonny_robot.cpp  sonny_robot.h
students/robots/robot_5/: MonRobot.cpp  MonRobot.h  MyRobot.cpp  MyRobot.h  RobotFB_diag.cpp
students/robots/robot_6/: BorisGuillaumator.h  MonRobotGPKD.cpp  MonRobotGPKD.h  RobotFB.cpp  RobotFB.h  RobotFB_diag.cpp  RobotFB_diag.h
students/robots/robot_7/: BorisGuillaumator.cpp  MonRobotGPKD.cpp  MyRobot.cpp  MyRobot.h  RobotTeamR.cpp
students/robots/robot_8/: MonRobotGPKD.cpp  MonRobotGPKD.h  MonRobotGPKD_v2.cpp  MonRobotGPKD_v2.h  MyRobot.cpp  RobotTeamR.cpp  RobotTeamR.h  Roboto.cpp
students/robots/robot_9/: MyRobot.cpp  MyRobot.h  RobotTeamR.cpp  RobotTeamR.h  Roboto.cpp  SoftIntersRobot.h
